<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/tv_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_1"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_title_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_1" />

    <TextView
        android:id="@+id/tv_title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_2"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="64dp" />

    <Button
        android:id="@+id/btn_product_list"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/product_list"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="128dp"
        app:layout_constraintBottom_toTopOf="@id/btn_add_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_2" />

    <Button
        android:id="@+id/btn_add_product"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btn_search_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_product_list" />

    <Button
        android:id="@+id/btn_search_product"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/search_product"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="256dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_product" />

</androidx.constraintlayout.widget.ConstraintLayout>