<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_product"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="8dp">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_item_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/product_name"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_product_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/product_code_hint"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_item_product_name" />

        <TextView
            android:id="@+id/tv_item_product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/placeholder_quantity"
            android:textSize="20sp"
            android:layout_marginEnd="8dp"
            card_view:layout_constraintTop_toTopOf="@id/tv_item_product_code"
            card_view:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_item_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/placeholder_price"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_item_product_quantity" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>